# spoo

./: CMakeLists.txt  COPYING.txt  README.md  README.txt
examples/: CMakeLists.txt  hello.c
include/spoo/: c11.h  spoo.h
src/: CMakeLists.txt  c11api.c  common.c  config.h.in  internal.h  pthreads.c  pthreads.h  win32.c  win32.h
tests/: CMakeLists.txt  corecount.c  sleep.c
